# bill_spliting_system

./: .Dockerignore  .gitignore  Dockerfile  compose.yml  guidelines.md  prometheus.yml  pyproject.toml  scripts.py
.github/workflows/: docker.yml  python.yml
databases/: household.json  order.json  preparation.json  supermarket.json  supermarketDB.py
src/: app.py  cli.py  init.py  logger.py  orderSetUp.py  server.py  shopping.py  task1.py  task2.py  task3.py  test.py
tests/: app.py  task1.py  task2.py  task3.py  utils.py
tests/databases/: household.json  order.json  supermarket.json
