[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = [" "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
flake8 = "^7.1.1"
tinydb = "^4.8.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = 'scripts:format'
lint = 'scripts:lint'

[tool.black]
line-length = 79
include = 'src/.*|tests/.*'
quiet = true
